--- a/css/style.css
+++ b/css/style.css
@@ -78,3 +78,22 @@
 }
 
 /* END CAROUSEL */
+
+/* BUTTON LINKED */
+
+.buttonlink {
+  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+  margin-top: 150px;
+  text-align: center;
+}
+
+.btn-warning {
+  background-color: #2dacb4;
+  border-color: #2dacb4;
+}
+
+/* BUTTON LINKED */
