--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Kenia&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Kenia&family=Nanum+Gothic:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Anton&family=Kenia&family=Nanum+Gothic:wght@700&display=swap');
 
 .navbar {
   background-color: #2dacb4;
@@ -82,6 +83,7 @@
 /* BUTTON LINKED */
 
 .buttonlink {
+  font-size: larger;
   position: absolute;
   margin-left: auto;
   margin-right: auto;
@@ -94,6 +96,13 @@
 .btn-warning {
   background-color: #2dacb4;
   border-color: #2dacb4;
+  font-family: 'Anton', sans-serif;
+  font-family: 'Kenia', sans-serif;
+  font-family: 'Nanum Gothic', sans-serif;
+  text-align: center;
+  font-size: larger;
+  width: 100px;
+  height: 10px;
 }
 
 /* BUTTON LINKED */
