--- a/src/Home/style.css
+++ b/src/Home/style.css
@@ -54,15 +54,15 @@ body {
 }
 
 #slide-3:target ~ .images {
-  margin-left: -190%;
+  margin-left: -200%;
 }
 
 #slide-4:target ~ .images {
-  margin-left: -293%;
+  margin-left: -300%;
 }
 
 #slide-5:target ~ .images {
-  margin-left: -388%;
+  margin-left: -400%;
 }
 
 .navigation a {
@@ -189,4 +189,9 @@ section.ruang-donasi div p {
   font-size: 14px;
   margin-bottom: 0;
   margin-left: 10px;
+}
+
+a {
+  text-decoration: none;
+  color: black;
 }
