rapihkan folder img & edit style / index

--- a/src/DetailDonasi/style.css
+++ b/src/DetailDonasi/style.css
@@ -20,3 +20,7 @@ body {
   font-family: 'Kenia', sans-serif;
   font-family: 'Nanum Gothic', sans-serif;
 }
+
+.posterdonasi {
+  padding-top: -100%;
+}
