--- a/src/DetailDonasi/style.css
+++ b/src/DetailDonasi/style.css
@@ -2,6 +2,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Kenia&family=Nanum+Gothic:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Anton&family=Kenia&family=Nanum+Gothic:wght@700&display=swap');
 
+@font-face {
+  font-family: 'Handmade';
+  src: url(/font/Handmade.otf) format('opentype');
+}
+
 body {
   padding: 0;
   margin: 0;
@@ -21,6 +26,35 @@ body {
   font-family: 'Nanum Gothic', sans-serif;
 }
 
-.posterdonasi {
-  padding-top: -100%;
+.img {
+  float: left;
+  width: 400px;
+  height: 200px;
+}
+
+.fotodonasi {
+  margin-top: 13px;
+  padding: 5px 20px;
+}
+
+.fotodonasi img {
+  width: 600px;
+  height: 300px;
+  border-radius: 11px;
+  border: 8px solid;
+}
+
+h1 {
+  font-family: 'Handmade', sans-serif;
+  float: right;
+  text-decoration: underline;
+  text-decoration-color: red;
+  margin-top: 130px;
+  margin-right: 150px;
+  font-size: 28px;
+}
+
+p {
+  margin-top: 90px;
+  text-justify: auto;
 }
