--- a/src/DetailDonasi/style.css
+++ b/src/DetailDonasi/style.css
@@ -5,6 +5,8 @@
 @font-face {
   font-family: 'Handmade';
   src: url(/font/Handmade.otf) format('opentype');
+  font-family: 'Letters for Learners';
+  src: url(/font/Letters\ for\ Learners.ttf) format('woff');
 }
 
 body {
@@ -33,7 +35,7 @@ body {
 }
 
 .fotodonasi {
-  margin-top: 13px;
+  margin-top: 30px;
   padding: 5px 20px;
 }
 
@@ -50,11 +52,39 @@ h1 {
   text-decoration: underline;
   text-decoration-color: red;
   margin-top: 130px;
-  margin-right: 150px;
+  margin-right: 50px;
   font-size: 28px;
+  text-justify: auto;
 }
 
 p {
+  font-family: 'Letters for Learners', sans-serif;
+  font-size: 22px;
   margin-top: 90px;
   text-justify: auto;
+}
+
+hr {
+  border: 4px solid;
+  margin: 20px 0;
+}
+
+/* styles.css */
+
+#progress-bar-container {
+  margin-left: 40%;
+  width: 400px;
+  border: 1px solid #ccc;
+  overflow: hidden;
+  border-radius: 15px;
+}
+
+#progress-bar {
+  width: 30%;
+  height: 30px;
+  background-color: #4caf50;
+  text-align: center;
+  line-height: 30px;
+  color: white;
+  border-radius: 15px;
 }
