--- a/src/DetailDonasi/style.css
+++ b/src/DetailDonasi/style.css
@@ -48,7 +48,7 @@ body {
   width: 600px;
   height: 300px;
   border-radius: 11px;
-  border: 8px solid;
+  border: 2px solid black;
 }
 
 h1 {
@@ -77,17 +77,18 @@ hr {
 /* styles.css */
 
 #progress-bar-container {
-  margin-left: 40%;
+  margin-left: 420px;
   width: 400px;
   border: 1px solid #ccc;
+  background-color: #323030;
   overflow: hidden;
   border-radius: 15px;
 }
 
 #progress-bar {
   width: 30%;
-  height: 30px;
-  background-color: #4caf50;
+  height: 38px;
+  background-color: #79b55d;
   text-align: center;
   line-height: 30px;
   color: white;
@@ -106,7 +107,7 @@ hr {
   border: 2px solid black;
   font-size: 1.5em;
   padding: 15px 20px;
-  border-radius: 40px;
+  border-radius: 10px;
   margin: 15px;
   cursor: pointer;
   width: 300px; /* Menyesuaikan lebar */
@@ -114,12 +115,30 @@ hr {
 }
 
 .btn-custom.active {
-  background-color: rgb(14, 255, 150);
+  background-color: #00d62f;
   color: black;
-  border: solid #ee9515;
+  border: solid #ffb800;
   border-radius: 26px;
 }
 
 h2 {
+  margin: 30px;
+}
+
+.buttonnext {
   margin: 15px;
+  width: 613px;
+  height: 50px;
+  background-color: #46ba7b;
+  color: white;
+  border: solid 1px;
+}
+
+.nextbut {
+  margin: 40px;
+  margin-left: 200px;
+}
+
+.container1 {
+  margin: 90px;
 }
