--- a/src/Home/style.css
+++ b/src/Home/style.css
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Kenia&family=Nanum+Gothic:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Anton&family=Kenia&family=Nanum+Gothic:wght@700&display=swap');
 
+
 body {
   padding: 0;
   margin: 0;
@@ -237,6 +238,9 @@ a {
   color: black;
 }
 
-.container2 {
-  width: 100%;
+footer {
+  background-color: #2dacb4;
+  margin-top: 100px;
 }
+
+
