--- a/src/Home/style.css
+++ b/src/Home/style.css
@@ -10,11 +10,24 @@ body {
 
 .navbar {
   background-color: #2dacb4;
+  display: flex;
+  align-items: center;
+  padding: 0 10%;
+  height: 70px;
+}
+
+.navbar ul {
+  list-style: none;
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+  font-family: "Kenia", sans-serif;
+  font-family: "Nanum Gothic", sans-serif;
 }
 
 .navbar-brand {
   font-family: "Kenia", sans-serif;
-  font-size: 200%;
+  font-size: 30px;
 }
 
 .nav-link {
@@ -185,15 +198,15 @@ section.ruang-donasi {
 }
 
 section.ruang-donasi div {
-  width: 400px;
+  width: 410px;
   height: 345px;
   border-radius: 15px;
   background-color: rgb(237, 236, 236);
 }
 
 section.ruang-donasi div img {
-  width: 400px;
-  height: 200px;
+  width: 410px;
+  height: 205px;
   object-fit: cover;
   border-top-right-radius: 15px;
   border-top-left-radius: 15px;
