--- a/src/DetailDonasi/style.css
+++ b/src/DetailDonasi/style.css
@@ -52,7 +52,7 @@ body {
 }
 
 h1 {
-  font-family: 'OldNewspaperTypes', sans-serif;
+  font-family: 'Times New Roman', Times, serif;
   float: right;
   text-decoration: underline;
   text-decoration-color: red;
@@ -83,7 +83,7 @@ hr {
   background-color: #323030;
   overflow: hidden;
   border-radius: 15px;
-  margin-left: 500px;
+  margin-left: 450px;
 }
 
 #progress-bar {
@@ -116,7 +116,7 @@ hr {
 }
 
 .btn-custom.active {
-  background-color: #00d62f;
+  background-color: #4efe62;
   color: black;
   border: solid #ffb800;
   border-radius: 26px;
@@ -137,5 +137,5 @@ h2 {
 
 .nextbut {
   margin: 40px;
-  margin-left: 330px;
+  margin-left: 340px;
 }
