--- a/src/Home/style.css
+++ b/src/Home/style.css
@@ -2,7 +2,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Kenia&family=Nanum+Gothic:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Anton&family=Kenia&family=Nanum+Gothic:wght@700&display=swap');
 
-
 body {
   padding: 0;
   margin: 0;
@@ -42,8 +41,8 @@ body {
 
 .wrapper .slides .images img {
   height: 440px;
-  width: 1331px;
-  scroll-padding-top: 10px;
+  width: 100%;
+  padding: 0;
 }
 
 #slide-1:target ~ .images {
@@ -242,5 +241,3 @@ footer {
   background-color: #2dacb4;
   margin-top: 100px;
 }
-
-
