--- a/asset/css/stylepayment.css
+++ b/asset/css/stylepayment.css
@@ -1,32 +1,61 @@
-@import url("https://fonts.googleapis.com/css2?family=Kenia&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Kenia&family=Nanum+Gothic:wght@700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Anton&family=Kenia&family=Nanum+Gothic:wght@700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Kenia&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kenia&family=Nanum+Gothic:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Anton&family=Kenia&family=Nanum+Gothic:wght@700&display=swap');
 
-* {
-  margin: 0;
+body {
   padding: 0;
+  margin: 0;
+  overflow-x: hidden;
 }
 
 body {
   overflow-x: hidden;
 }
 
+.navbar-brand a {
+  margin-top: 50px;
+}
+
+.navbar-brand img {
+  width: 80px;
+  height: auto;
+  margin: auto;
+}
+
 .navbar {
-  background-color: #2dacb4;
-  height: 70px;
+  background-color: #4dbd90;
   display: flex;
   align-items: center;
+  padding: 0 10%;
+  height: 70px;
+}
+
+.navbar ul {
+  list-style: none;
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+  font-family: 'Kenia', sans-serif;
+  font-family: 'Nanum Gothic', sans-serif;
+  margin-top: 10px;
+}
+
+.navbar li {
+  gap: 20rem;
 }
 
 .navbar-brand {
-  padding: 0 5%;
-  font-family: "Kenia", sans-serif;
-  font-size: 200%;
-  color: #000;
+  font-family: 'Kenia', sans-serif;
+  font-size: 30px;
+}
+
+.nav-link {
+  font-family: 'Kenia', sans-serif;
+  font-family: 'Nanum Gothic', sans-serif;
 }
 
 main {
-  margin-top: 30px;
+  margin-top: 60px;
   padding: 0 5%;
 }
 
@@ -148,4 +177,9 @@ div.pay-desc h6 {
   font-size: 23px;
   font-weight: 500;
   margin-bottom: 5px;
+}
+
+a {
+  text-decoration: none;
+  color: black;
 }
