--- a/asset/css/stylehome.css
+++ b/asset/css/stylehome.css
@@ -1,6 +1,11 @@
-@import url("https://fonts.googleapis.com/css2?family=Kenia&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Kenia&family=Nanum+Gothic:wght@700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Anton&family=Kenia&family=Nanum+Gothic:wght@700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Kenia&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kenia&family=Nanum+Gothic:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Anton&family=Kenia&family=Nanum+Gothic:wght@700&display=swap');
+
+@font-face {
+  font-family: 'Progelud';
+  src: url(/asset/font/Progelud.otf) format('opentype');
+}
 
 body {
   padding: 0;
@@ -8,8 +13,14 @@ body {
   overflow-x: hidden;
 }
 
+.navbar-brand img {
+  width: 80px;
+  height: auto;
+  margin: auto;
+}
+
 .navbar {
-  background-color: #2dacb4;
+  background-color: #4dbd90;
   display: flex;
   align-items: center;
   padding: 0 10%;
@@ -21,18 +32,19 @@ body {
   display: flex;
   align-items: center;
   gap: 2rem;
-  font-family: "Kenia", sans-serif;
-  font-family: "Nanum Gothic", sans-serif;
+  font-family: 'Kenia', sans-serif;
+  font-family: 'Nanum Gothic', sans-serif;
+  margin-top: 10px;
 }
 
 .navbar-brand {
-  font-family: "Kenia", sans-serif;
+  font-family: 'Kenia', sans-serif;
   font-size: 30px;
 }
 
 .nav-link {
-  font-family: "Kenia", sans-serif;
-  font-family: "Nanum Gothic", sans-serif;
+  font-family: 'Kenia', sans-serif;
+  font-family: 'Nanum Gothic', sans-serif;
 }
 
 /* CARAOUSEL  */
@@ -47,14 +59,13 @@ body {
   width: 80%;
   margin: auto;
   margin-top: 50px;
-  border-radius: 10px;
+  border-radius: 15px;
+  border: solid #dedede;
   overflow: hidden;
-  border: 6px solid;
 }
 .wrapper .slides .images img {
-  height: 440px;
-  width: 1331px;
-  scroll-padding-top: 10px;
+  width: 100%;
+  height: 400px;
 }
 #slide-1:target ~ .images {
   margin-left: 0%;
@@ -116,7 +127,7 @@ body {
 
 .ngaji {
   font-size: 25px;
-  background-color: #1c5561;
+  background-color: black;
   color: #fff;
   border: none;
   padding: 10px 40px;
@@ -125,7 +136,7 @@ body {
 
 .donasi {
   font-size: 25px;
-  background-color: #1c5561;
+  background-color: black;
   color: #fff;
   border: none;
   padding: 10px 40px;
@@ -232,6 +243,7 @@ section.ruang-donasi div button {
 }
 
 section.ruang-donasi div h4 {
+  font-family: 'Progelud', sans-serif;
   font-size: 23px;
   margin-left: 10px;
   font-weight: 600;
@@ -249,6 +261,34 @@ a {
 }
 
 footer {
-  background-color: #2dacb4;
+  background-color: #4dbd90;
   margin-top: 100px;
+}
+
+p {
+  text-align: justify;
+}
+
+a {
+  text-align: justify;
+}
+
+.text-reset a {
+  text-align: center;
+}
+
+/* MAX 768px */
+@media screen and (max-width: 768px) {
+  .wrapper {
+    width: 90%;
+    height: 200px;
+    margin-top: 30px;
+    border-radius: 10px;
+  }
+  .wrapper .slides .images img {
+    height: auto;
+  }
+}
+
+@media screen and (max-width: 1200px) {
 }
