--- a/asset/css/styledonasi.css
+++ b/asset/css/styledonasi.css
@@ -152,7 +152,7 @@ hr {
 .btn-custom {
   background-color: white;
   color: black;
-  border: 2px solid black;
+  border: 1px solid #bbb;
   font-size: 1.5em;
   padding: 15px 20px;
   border-radius: 10px;
@@ -165,7 +165,7 @@ hr {
 .btn-custom.active {
   background-color: #4efe62;
   color: black;
-  border: solid #ffb800;
+  border: solid 1px black;
   border-radius: 26px;
 }
 
