--- a/asset/css/styledonasi.css
+++ b/asset/css/styledonasi.css
@@ -80,8 +80,6 @@ hr {
   margin: 20px 0;
 }
 
-/* styles.css */
-
 .progress-wrapper {
   position: relative;
   margin: 50px auto;
@@ -89,13 +87,12 @@ hr {
 }
 
 #progress-bar-container {
-  margin-left: 420px;
   width: 400px;
   border: 1px solid #ccc;
   background-color: black;
   overflow: hidden;
   border-radius: 15px;
-  margin-left: 450px;
+  margin: 0 auto;
   text-align: center;
 }
 
@@ -150,6 +147,7 @@ hr {
 }
 
 .btn-custom {
+  margin: 40px auto;
   background-color: white;
   color: black;
   border: 1px solid #bbb;
@@ -158,8 +156,8 @@ hr {
   border-radius: 10px;
   margin: 15px;
   cursor: pointer;
-  width: 300px; /* Menyesuaikan lebar */
-  height: 80px; /* Menyesuaikan tinggi */
+  width: 300px;
+  height: 80px;
 }
 
 .btn-custom.active {
@@ -171,20 +169,17 @@ hr {
 
 h2 {
   margin: 30px;
+  margin-left: 10vw;
 }
 
 .buttonnext {
-  margin: 15px;
+  margin: 0 auto 80px;
+  display: block;
   width: 313px;
   height: 50px;
   background-color: #46ba7b;
   color: white;
   border: solid 1px;
-}
-
-.nextbut {
-  margin-left: 450px;
-  /* margin-right: 50%; */
 }
 
 /* SCREEN 768px */
@@ -210,23 +205,23 @@ h2 {
   }
 
   p {
-    font-size: 16px; /* Mengurangi ukuran font pada layar kecil */
-    margin-top: 90px; /* Mengurangi margin atas pada p */
+    font-size: 16px;
+    margin-top: 90px;
   }
 
   #progress-bar-container {
-    margin-left: 20px; /* Menyesuaikan margin pada progres bar */
-    width: 100%; /* Lebar progres bar menyesuaikan layar */
-    margin-left: 0; /* Menghilangkan margin kiri yang diulang */
+    margin-left: 20px;
+    width: 100%;
+    margin-left: 0;
   }
 
   .buttonnext {
-    width: 100%; /* Lebar tombol menyesuaikan layar */
-    margin: 15px 0; /* Menyesuaikan margin pada tombol */
+    width: 100%;
+    margin: 15px 0;
   }
 
   .nextbut {
-    margin-left: 5%; /* Menyesuaikan margin kiri pada nextbut */
+    margin-left: 5%;
   }
 
   .above-progress {
