--- a/asset/css/style.about.css
+++ b/asset/css/style.about.css
@@ -1,18 +1,18 @@
-@import url('https://fonts.googleapis.com/css?family=Allura|Josefin+Sans');
-@import url('https://fonts.googleapis.com/css2?family=Kenia&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Kenia&family=Nanum+Gothic:wght@700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Anton&family=Kenia&family=Nanum+Gothic:wght@700&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Allura|Josefin+Sans");
+@import url("https://fonts.googleapis.com/css2?family=Kenia&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Kenia&family=Nanum+Gothic:wght@700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Anton&family=Kenia&family=Nanum+Gothic:wght@700&display=swap");
 
 @font-face {
-  font-family: 'Handmade';
-  src: url(/font/Handmade.otf) format('opentype');
-  font-family: 'OldNewspaperTypes';
-  src: url(/font/OldNewspaperTypes.ttf) format('woff2');
+  font-family: "Handmade";
+  src: url(/font/Handmade.otf) format("opentype");
+  font-family: "OldNewspaperTypes";
+  src: url(/font/OldNewspaperTypes.ttf) format("woff2");
 }
 
 @font-face {
-  font-family: 'Helvetica';
-  src: url(/font/Helvetica.otf) format('woff');
+  font-family: "Helvetica";
+  src: url(/font/Helvetica.otf) format("woff");
 }
 
 * {
@@ -42,20 +42,24 @@ body {
   list-style: none;
   display: flex;
   align-items: center;
+  justify-content: center;
   gap: 2rem;
-  font-family: 'Kenia', sans-serif;
-  font-family: 'Nanum Gothic', sans-serif;
-  margin-top: 10px;
+  font-family: "Kenia", sans-serif;
+  font-family: "Nanum Gothic", sans-serif;
+}
+
+.navbar img {
+  height: 50px;
 }
 
 .navbar-brand {
-  font-family: 'Kenia', sans-serif;
+  font-family: "Kenia", sans-serif;
   font-size: 30px;
 }
 
 .nav-link {
-  font-family: 'Kenia', sans-serif;
-  font-family: 'Nanum Gothic', sans-serif;
+  font-family: "Kenia", sans-serif;
+  font-family: "Nanum Gothic", sans-serif;
 }
 
 .wrapper {
@@ -63,7 +67,7 @@ body {
 }
 
 .wrapper h1 {
-  font-family: 'Allura', cursive;
+  font-family: "Allura", cursive;
   font-size: 52px;
   margin-bottom: 60px;
   text-align: center;
