--- a/asset/css/contactus.css
+++ b/asset/css/contactus.css
@@ -1,7 +1,30 @@
-body {
-  background-color: white;
+@import url('https://fonts.googleapis.com/css?family=Allura|Josefin+Sans');
+@import url('https://fonts.googleapis.com/css2?family=Kenia&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kenia&family=Nanum+Gothic:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Anton&family=Kenia&family=Nanum+Gothic:wght@700&display=swap');
+
+@font-face {
+  font-family: 'Handmade';
+  src: url(/font/Handmade.otf) format('opentype');
+  font-family: 'OldNewspaperTypes';
+  src: url(/font/OldNewspaperTypes.ttf) format('woff2');
 }
 
+@font-face {
+  font-family: 'Helvetica';
+  src: url(/font/Helvetica.otf) format('woff');
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+body {
+  padding: 0;
+  margin: 0;
+  color: #fff;
+}
 .navbar-brand img {
   width: 80px;
   height: auto;
@@ -9,7 +32,7 @@ body {
 }
 
 .navbar {
-  background-color: whitesmoke;
+  background-color: #4dbd90;
   display: flex;
   align-items: center;
   padding: 0 10%;
@@ -20,10 +43,14 @@ body {
   list-style: none;
   display: flex;
   align-items: center;
+  justify-content: center;
   gap: 2rem;
   font-family: 'Kenia', sans-serif;
   font-family: 'Nanum Gothic', sans-serif;
-  margin-top: 10px;
+}
+
+.navbar img {
+  height: 50px;
 }
 
 .navbar-brand {
@@ -34,4 +61,134 @@ body {
 .nav-link {
   font-family: 'Kenia', sans-serif;
   font-family: 'Nanum Gothic', sans-serif;
+}
+
+h1 {
+  text-align: center;
+  margin-top: 40px;
+}
+
+.loc {
+  display: inline-block;
+}
+
+/* FORM */
+body {
+  color: white;
+}
+.right_conatct_social_icon {
+  background: linear-gradient(to top right, #4dbd90 -5%, #4dbd90 100%);
+}
+.contact_us {
+  background-color: #f1f1f1;
+  padding: 120px 0px;
+}
+
+.contact_inner {
+  background-color: #fff;
+  position: relative;
+  box-shadow: 20px 22px 44px #cccc;
+  border-radius: 25px;
+}
+.contact_field {
+  padding: 60px 340px 90px 100px;
+}
+.right_conatct_social_icon {
+  height: 100%;
+}
+
+.contact_field h3 {
+  color: #000;
+  font-size: 40px;
+  letter-spacing: 1px;
+  font-weight: 600;
+  margin-bottom: 10px;
+}
+.contact_field p {
+  color: #000;
+  font-size: 13px;
+  font-weight: 400;
+  letter-spacing: 1px;
+  margin-bottom: 35px;
+}
+.contact_field .form-control {
+  border-radius: 0px;
+  border: none;
+  border-bottom: 1px solid #ccc;
+}
+.contact_field .form-control:focus {
+  box-shadow: none;
+  outline: none;
+  border-bottom: 2px solid #4dbd90;
+}
+.contact_field .form-control::placeholder {
+  font-size: 13px;
+  letter-spacing: 1px;
+}
+
+.contact_info_sec {
+  position: absolute;
+  background-color: #2d2d2d;
+  right: 1px;
+  top: 18%;
+  height: 340px;
+  width: 340px;
+  padding: 40px;
+  border-radius: 25px 0 0 25px;
+}
+.contact_info_sec h4 {
+  letter-spacing: 1px;
+  padding-bottom: 15px;
+}
+
+.info_single {
+  margin: 30px 0px;
+}
+.info_single i {
+  margin-right: 15px;
+}
+.info_single span {
+  font-size: 14px;
+  letter-spacing: 1px;
+}
+
+button.contact_form_submit {
+  background: linear-gradient(to top right, #4dbd90 -5%, #4dbd90 100%);
+  border: none;
+  color: #fff;
+  padding: 10px 15px;
+  width: 100%;
+  margin-top: 25px;
+  border-radius: 35px;
+  cursor: pointer;
+  font-size: 14px;
+  letter-spacing: 2px;
+}
+.socil_item_inner li {
+  list-style: none;
+}
+.socil_item_inner li a {
+  color: #fff;
+  margin: 0px 15px;
+  font-size: 14px;
+}
+.socil_item_inner {
+  padding-bottom: 10px;
+}
+
+.map_sec {
+  padding: 50px 0px;
+}
+.map_inner h4,
+.map_inner p {
+  color: #000;
+  text-align: center;
+}
+.map_inner p {
+  font-size: 13px;
+}
+.map_bind {
+  margin-top: 50px;
+  border-radius: 30px;
+  overflow: hidden;
 }
